--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
-    "@mui/styles": "^5.15.6",
+    "@mui/system": "^5.15.6",
     "next": "^14.1.0"
   },
   "devDependencies": {
@@ -24,7 +24,6 @@
     "eslint-config-next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "typescript": "^5.3.3"
   }
 }
